2013-11-08  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/bits/libc-vdso.h (VDSO_IFUNC_RET):
	Add artificial ODP entry for vDSO symbol for PPC64.
	* sysdeps/unix/sysv/linux/powerpc/gettimeofday.c: Adjust includes.
	* sysdeps/unix/sysv/linux/powerpc/time.c: Likewise.

2013-09-25  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/stackguard-macros.h (POINTER_CHK_GUARD:
	Fix thread ID register.

2013-09-11  Will Newton  <will.newton@linaro.org>

	[BZ #15857]
	* malloc/malloc.c (__libc_memalign): Check the value of bytes
	does not overflow.

2013-09-11  Will Newton  <will.newton@linaro.org>

	[BZ #15856]
	* malloc/malloc.c (__libc_valloc): Check the value of bytes
	does not overflow.

2013-09-11  Will Newton  <will.newton@linaro.org>

	[BZ #15855]
	* malloc/malloc.c (__libc_pvalloc): Check the value of bytes
	does not overflow.

2013-09-23  Carlos O'Donell  <carlos@redhat.com>

	[BZ #15754]
	* elf/Makefile (tests): Add tst-ptrguard1.
	(tests-static): Add tst-ptrguard1-static.
	(tst-ptrguard1-ARGS): Define.
	(tst-ptrguard1-static-ARGS): Define.
	* elf/tst-ptrguard1.c: New file.
	* elf/tst-ptrguard1-static.c: New file.
	* sysdeps/x86_64/stackguard-macros.h: Define POINTER_CHK_GUARD.
	* sysdeps/i386/stackguard-macros.h: Likewise.
	* sysdeps/powerpc/powerpc32/stackguard-macros.h: Likewise.
	* sysdeps/powerpc/powerpc64/stackguard-macros.h: Likewise.
	* sysdeps/s390/s390-32/stackguard-macros.h: Likewise.
	* sysdeps/s390/s390-64/stackguard-macros.h: Likewise.
	* sysdeps/sparc/sparc32/stackguard-macros.h: Likewise.
	* sysdeps/sparc/sparc64/stackguard-macros.h: Likewise.

2013-09-23  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #14547]
	* string/tst-strcoll-overflow.c: New test case.
	* string/Makefile (xtests): Add tst-strcoll-overflow.
	* string/strcoll_l.c (STRCOLL): Skip allocating memory for
	cache if string sizes may cause integer overflow.

	[BZ #14547]